@@ -19,6 +19,7 @@
 * Adyen: Pass phone, statement, device_fingerprint [curiousepic] #3178
 * Adyen: Fix adding phone from billing address [curiousepic] #3179
 * Fix partial or missing address exceptions [molbrown] #3180
+Adyen: Update to support normalized stored credential fields [molbrown] #3182
 
 == Version 1.91.0 (February 22, 2019)
 * WorldPay: Pull CVC and AVS Result from Response [nfarve] #3106
